packages/validator/tests/fixtures/resolver/spread-function.ts


export default function spread(...args: string[]): string {
  
  return args.join('_')
}
